# mkdocs-lab

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  workflow.py
.devcontainer/: .zshrc  Dockerfile  devcontainer.env  devcontainer.json  docker-compose.yml
docs/: workflow-reference.md
search/: search_index.json
workflow-reference/: index.html
